[package]
name = "registered_attribute_based_encryption"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-bls12-381 = { version = "0.5.0" }
sha2 = "0.10"
ark-serialize = "0.5.0"
